changed h1 font from Rambla, as it was broken on Macs, fixes #5

--- a/web/css/custom-style.css
+++ b/web/css/custom-style.css
@@ -72,3 +72,7 @@
  * Other stuff
  *--------------------------------------------------
  */
+
+ .header .navbar-brand h1 {
+    font-family: "Open Sans",Arial,serif;
+ }
